--- a/testng_proj/WebContent/res/css/profile.css
+++ b/testng_proj/WebContent/res/css/profile.css
@@ -32,7 +32,7 @@ body {
   width: 50vw;
   max-width: 400px;
   min-width: 300px;
-  height: 160px;
+  min-height: 400px;
   background: white;
   position: relative;
   box-sizing: border-box;
