--- a/testng_proj/WebContent/res/css/review.css
+++ b/testng_proj/WebContent/res/css/review.css
@@ -97,3 +97,76 @@ input.star:checked ~ .rev-box{
   visibility: visible;
 }
 
+.reviewBox
+{
+	  box-sizing: border-box;
+}
+
+.checked {
+  color: #dc0345;
+}
+
+.otherReviews{
+ font-family: "Poppins", sans-serif;
+  margin: 0 auto; /* Center website */
+  max-width: 80%; /* Max width */
+  padding: 20px;
+}
+
+.heading {
+  font-size: 25px;
+  margin-right: 25px;
+}
+
+/* Three column layout */
+.side {
+  float: left;
+  width: 15%;
+  margin-top:10px;
+}
+
+.middle {
+  margin-top:10px;
+  float: left;
+  width: 70%;
+}
+
+/* Place text to the right */
+.right {
+  text-align: right;
+}
+
+/* Clear floats after the columns */
+.revRow:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.fa {
+  font-size: 25px;
+}
+
+/* The bar container */
+.bar-container {
+  width: 100%;
+  background-color: #f1f1f1;
+  text-align: center;
+  color: white;
+}
+
+/* Individual bars */
+.bar-5 {width: 60%; height: 18px; background-color: #0315ff;}
+.bar-4 {width: 30%; height: 18px; background-color: #0315ff;}
+.bar-3 {width: 10%; height: 18px; background-color: #0315ff;}
+.bar-2 {width: 4%; height: 18px; background-color: #0315ff;}
+.bar-1 {width: 15%; height: 18px; background-color: #0315ff;} /* #dc0345 */
+
+@media (max-width: 400px) {
+  .side, .middle {
+    width: 100%;
+  }
+  .right {
+    display: none;
+  }
+}
