--- a/testng_proj/WebContent/res/css/styles_other.css
+++ b/testng_proj/WebContent/res/css/styles_other.css
@@ -1,48 +1,165 @@
 input[type="number"] {
-  -webkit-appearance: textfield;
-  -moz-appearance: textfield;
-  appearance: textfield;
+	-webkit-appearance: textfield;
+	-moz-appearance: textfield;
+	appearance: textfield;
 }
 
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
+input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer-spin-button
+	{
+	-webkit-appearance: none;
 }
 
 .cartItemQuantity {
-     width: 45px;
-  height: 45px;
-text-align: center;
-      border:none;
-
+	width: 45px;
+	height: 45px;
+	text-align: center;
+	border: none;
 }
 
 .number-input {
-  /* border: 2px solid #ddd; */
-  display: inline-flex;
-  font-family: sans-serif;
-
+	/* border: 2px solid #ddd; */
+	display: inline-flex;
+	font-family: sans-serif;
 }
 
-.number-input,
-.number-input * {
-  box-sizing: border-box;
+.number-input, .number-input * {
+	box-sizing: border-box;
 }
 
 .number-input button {
-  outline:none;
-  -webkit-appearance: none;
-  background-color: transparent;
-  border: none;
-  align-items: center;
-  justify-content: center;
-  width: 3rem;
-  height: 3rem;
-  cursor: pointer;
-  margin: 0;
-  position: relative;
-  text-align: center;
-  color: white;
-  background-color: #787878;
-  
+	outline: none;
+	-webkit-appearance: none;
+	background-color: transparent;
+	border: none;
+	align-items: center;
+	justify-content: center;
+	width: 3rem;
+	height: 3rem;
+	cursor: pointer;
+	margin: 0;
+	position: relative;
+	text-align: center;
+	color: white;
+	background-color: #787878;
+}
+
+.table {
+	min-width: 1000px !important;
+	width: 100%;
+	text-align: center;
+}
+
+.table th {
+	font-weight: 500;
+}
+
+.table .thead-primary {
+	background: rgba(0, 0, 0, 0.03);
+}
+
+.table .thead-primary tr th {
+	padding: 20px 10px;
+	color: #000000 !important;
+	border: 1px solid transparent !important;
+}
+
+.table tbody tr td {
+	text-align: center !important;
+	vertical-align: middle;
+	padding: 40px 10px;
+	border: 1px solid transparent !important;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.05) !important;
+}
+
+.table tbody tr td.product-remove a {
+	bordeR: 1px solid rgba(0, 0, 0, 0.1);
+	padding: 5px 7px 6px 10px;
+	color: #000000;
+}
+
+.table tbody tr td.product-remove a:hover {
+	border: 1px solid #f1b8c4;
+	background: #0315ff;
+}
+
+.table tbody tr td.product-remove a:hover span {
+	color: #fff;
+}
+
+.table tbody tr td.quantity {
+	width: 20%;
+}
+
+.table tbody tr td.image-prod .img {
+	display: block;
+	width: 100px;
+	height: 150px;
+	margin: 0 auto;
+}
+
+.table tbody tr td.product-name {
+	width: 30%;
+}
+
+.table tbody tr td.product-name h3 {
+	font-size: 14px;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+}
+
+.table tbody tr td.total, .table tbody tr td.price {
+	color: #000000;
+}
+
+.cart-total {
+	width: 100%;
+	display: block;
+	border: 1px solid rgba(0, 0, 0, 0.05);
+	padding: 20px;
+}
+
+.cart-total h3 {
+	font-size: 18px;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	margin-bottom: 20px;
+}
+
+.cart-total p {
+	width: 100%;
+	display: block;
+}
+
+.cart-total p span {
+	display: block;
+	width: 50%;
+}
+
+.cart-total p.total-price span {
+	text-transform: uppercase;
+}
+
+.cart-total p.total-price span:last-child {
+	color: #000000;
+}
+
+.cart-total hr {
+	background: rgba(255, 255, 255, 0.1);
+}
+
+.ftco-section {
+	padding: 6em 0;
+	position: relative;
+}
+
+@media ( max-width : 767.98px) {
+	.ftco-section {
+		padding: 6em 0;
+	}
+}
+
+@media ( min-width : 768px) {
+	.ftco-section .container-fluid {
+		padding: 0 4em;
+	}
 }
