--- a/testng_proj/WebContent/res/css/profile.css
+++ b/testng_proj/WebContent/res/css/profile.css
@@ -115,3 +115,24 @@ body {
 	font-family: "Open Sans", sans-serif; 
 	font-size: 1.2rem;
 }
+
+.alert {
+  padding: 20px;
+  background-color: #f44336;
+  color: white;
+}
+
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: black;
+}
