--- a/testng_proj/WebContent/res/css/styles_other.css
+++ b/testng_proj/WebContent/res/css/styles_other.css
@@ -71,18 +71,18 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
 	border-bottom: 1px solid rgba(0, 0, 0, 0.05) !important;
 }
 
-.table tbody tr td.product-remove a {
+.table tbody tr td.product-remove button {
 	bordeR: 1px solid rgba(0, 0, 0, 0.1);
 	padding: 5px 7px 6px 10px;
 	color: #000000;
 }
 
-.table tbody tr td.product-remove a:hover {
+.table tbody tr td.product-remove button:hover {
 	border: 1px solid #f1b8c4;
 	background: #0315ff;
 }
 
-.table tbody tr td.product-remove a:hover span {
+.table tbody tr td.product-remove button:hover span {
 	color: #fff;
 }
 
